# AI4MarketMaking

./: README.md
closed-form2/: README.md
closed-form2/examples/: run_single_cusip.py
closed-form2/mmqoute/: __init__.py  config.py  hamiltonian.py  intensity.py  quotes.py  riccati.py
closed-form2/tests/: test_single_cusip.py
closed-form3/: README.md  pyproject.toml
closed-form3/mmquote/: __init__.py  calibration.py  config.py  fd_hjb.py  hamiltonian.py  intensity.py  quotes.py  riccati.py
closed-form3/notebooks/: behavioral_tests.ipynb  section6_replication.ipynb
deepSOC4Hedging/: coreFunctions.py  market__maker.ipynb
market maker/: maker-maker.ipynb  market-maker.ipynb  market__maker.ipynb  requirements.txt
market maker/src/: gym.py  model.py  process.py  simulate.py  utils.py
market-maker/: dgm.py  finding_hamiltonain_.ipynb  market-maker.ipynb  requirements.txt
market-maker/src/: model.py  process.py  simulate.py
rl/: a2c.ipynb  ddpg.ipynb  deepSOC-training.ipynb  ppo.ipynb  requirements.txt  sac.ipynb  td3.ipynb  visualize.ipynb
rl/results/A2C_1/: events.out.tfevents.1713493779.toquemacaque.26944.0  events.out.tfevents.1713566706.formula-finance.316360.0
rl/results/A2C_2/: events.out.tfevents.1713844045.toquemacaque.78190.0
rl/results/DDPG_1/: events.out.tfevents.1713566224.formula-finance.314698.0
rl/results/DDPG_2/: events.out.tfevents.1713844050.toquemacaque.78244.0
rl/results/DDPG_3/: events.out.tfevents.1713854197.toquemacaque.17181.0
rl/src/: callback.py  env.py  eval.py  reward.py  simulate.py  utils.py
(+18 files in other folders)
