[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "mmquote"
version = "0.1.0"
description = "Closed-form market-making quotes: single-CUSIP Bergault-Evangelista-Gueant-Vieira proxy with multi-asset seams"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "scipy>=1.10"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
include = ["mmquote*"]
